# PandemicProfiler

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  start.sh
Model/: 2025cases.csv  Covid cases in India (1).csv  README.md  app.py  cases_india.csv  covid_prediction_model.py  requirements.txt  timeseries_india.csv  visualization.py
backend/: app.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Dashboard.tsx
frontend/src/services/: api.ts
