[project]
name = "pandemicprofiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask==3.0.2",
    "flask-cors==4.0.0",
    "joblib==1.3.2",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "pip>=25.1.1",
    "plotly>=6.1.1",
    "prophet==1.1.5",
    "python-dateutil==2.8.2",
    "scikit-learn==1.4.0",
]
